--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "a5ae9d66-9e7b-42a2-b8dc-acec48f98496"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
