--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~11.1.1",
     "@fortawesome/angular-fontawesome": "^0.8.2",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.14.0",
