--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@types/localforage": "^0.0.34",
+    "localforage": "^1.9.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.14.0",
     "tslib": "^2.0.0",
