--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@types/localforage": "^0.0.34",
+    "jwt-decode": "^3.1.2",
     "localforage": "^1.9.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.14.0",
