--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/localforage": "^0.0.34",
     "jwt-decode": "^3.1.2",
     "localforage": "^1.9.0",
+    "luxon": "^1.26.0",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.14.0",
     "tslib": "^2.0.0",
@@ -37,6 +38,7 @@
     "@angular/cli": "~11.1.2",
     "@angular/compiler-cli": "~11.1.1",
     "@types/jasmine": "~3.6.0",
+    "@types/luxon": "^1.26.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
