--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "jwt-decode": "^3.1.2",
     "localforage": "^1.9.0",
     "luxon": "^1.26.0",
-    "rxjs": "~6.6.0",
-    "sweetalert2": "^10.14.0",
+    "rxjs": "^6.6.6",
+    "sweetalert2": "^10.15.6",
     "tslib": "^2.0.0",
     "zone.js": "^0.11.4"
   },
@@ -35,9 +35,9 @@
     "@angular-devkit/build-angular": "~0.1101.2",
     "@angular/cli": "~11.1.2",
     "@angular/compiler-cli": "~11.1.1",
-    "@types/jasmine": "~3.6.0",
-    "@types/luxon": "^1.26.0",
-    "@types/node": "^12.11.1",
+    "@types/jasmine": "^3.6.7",
+    "@types/luxon": "^1.26.2",
+    "@types/node": "^12.20.6",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
